# huggingbench

./: .gitignore  LICENSE  README.md  load_test_plan.py  model_config_constants.py  model_config_for_triton.py  onnx_user.py  pyproject.toml  pytorch_user.py  requirements-triton.txt  requirements.txt  setup.py  triton_user.py
.github/workflows/: main.yml  python-app.yml
client/: base.py  bert.py  bert_locust.py  datasets.py  load_test_plan.py  onnx_user.py  pytorch_user.py  resnet.py  resnet_locust.py  runner.py  test.py  triton_client.py  triton_user.py
custom_dockers/optimum/: Dockerfile
docker/: build-all.sh
docker/observability/: README.md  docker-compose.yml  start-docker-compose.sh
docker/observability/grafana/provisioning/dashboards/: dashboard.yml
docker/observability/grafana/provisioning/dashboards/hugging-bench/: hugging-bench.json
docker/observability/grafana/provisioning/datasources/: datasource.yml
docker/observability/prometheus/: prometheus.yml
docker/openvino/: Dockerfile
docker/optimum/: Dockerfile  Dockerfile.cpu  Dockerfile.cpu.arm64  Dockerfile.gpu
docker/polygraphy/: Dockerfile
docker/prometheus/: prometheus.yml
docs/: .notes.md  cli.md  contributions.md  development.md
hugging_bench/: chart.py  example.py  hugging_bench_config.py  hugging_bench_exporter.py  hugging_bench_model_exporter.py  hugging_bench_runner.py  hugging_bench_triton.py  hugging_bench_util.py  load.py  main.py  requirements.txt
hugging_bench/docker/: build-all.sh
hugging_bench/docker/optimum/: Dockerfile
hugging_bench/src/: example.py  hugging_bench_config.py  hugging_bench_runner.py  hugging_bench_triton.py  hugging_bench_util.py
loadgen/: load_gen.py
src/bench/: chart.py  cli.py  config.py  exp_runner.py  main.py  plugin.py  plugin_manager.py  runner.py
src/client/: base.py  bert.py  bert_locust.py  datasets.py  resnet.py  resnet_locust.py  runner.py  triton_client.py  triton_user.py
src/hugging_bench/: hugging_bench_exporter.py  hugging_bench_util.py
src/loadgen/: load_gen.py
src/plugins/triton/: plugin.py  requirements.txt  triton_client.py  triton_server.py
src/server/: config.py  exporter.py  main.py  runner.py  triton.py  util.py
test/: test_bert_dataset.py  test_client_runner.py  test_config.py  test_dataset.py  test_e2e_experiment_runner.py  test_hugging_bench_config.py  test_resnet_dataset.py  test_triton_client.py
triton-server/: prometheus.yml  run-prom.sh  run-triton.sh
triton-server/model_repository/resnet50_onnx/: config.pbtxt
triton-server/model_repository/resnet50_torch/: config.pbtxt
utils/: export_resnet_to_onnx.py
